# raytrust

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: audit.yml  rust.yml
src/: camera.rs  image.rs  lib.rs  linalg.rs  main.rs  main.yml  scene.rs
src/materials/: dielectric.rs  diffuse.rs  mod.rs  reflective.rs
src/scene/: mod.rs  sphere.rs
src/surfaces/: mod.rs  sphere.rs
src/types/: mod.rs  point.rs  ray.rs  vect.rs
