[package]
name = "raytrust"
version = "0.1.0"
description = "An exercise in raytracing and rust"
authors = [ "Simon Sigurdhsson <Sigurdhsson@gmail.com>" ]
edition = "2018"
license = "ISC"
publish = false

[dependencies]
clap = { version = "2.33", features = ["yaml"]}

[dev-dependencies]
pretty_assertions = "1.0"
